// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tests for the Search component > Clicking the Search button saves the entered value to the local storage 1`] = `
<form
  action="#"
  class="w-3/5 flex justify-center m-auto gap-x-10 rounded"
  data-testid="search-form"
>
  <button
    class="w-1/5 bg-lime-700 p-3 rounded text-white font-extrabold"
    type="button"
  >
    Error
  </button>
  <input
    class="w-1/3 p-3"
    data-testid="search-input"
    id="search"
    name="search"
    type="text"
    value=""
  />
  <button
    class="w-1/5 bg-lime-700 p-3 rounded text-white font-extrabold"
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Tests for the Search component > The component retrieves the value from the local storage upon mounting. 1`] = `
<form
  action="#"
  class="w-3/5 flex justify-center m-auto gap-x-10 rounded"
  data-testid="search-form"
>
  <button
    class="w-1/5 bg-lime-700 p-3 rounded text-white font-extrabold"
    type="button"
  >
    Error
  </button>
  <input
    class="w-1/3 p-3"
    data-testid="search-input"
    id="search"
    name="search"
    type="text"
    value="cat"
  />
  <button
    class="w-1/5 bg-lime-700 p-3 rounded text-white font-extrabold"
    type="submit"
  >
    Search
  </button>
</form>
`;
